--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,19 @@
   <groupId>br.ce.wcaquino</groupId>
   <artifactId>functional-tasks</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.20</version>
+              <configuration>
+                  <parallel>all</parallel>
+                  <useUnlimitedThreads>true</useUnlimitedThreads>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
   <dependencies>
   	<dependency>
 	    <groupId>junit</groupId>
@@ -14,6 +27,11 @@
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.141.59</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-surefire-plugin</artifactId>
+	    <version>2.20</version>
 	</dependency>
   </dependencies>
 </project>
